Added rewrite module in httpd.conf for redirection

--- a/httpd.conf
+++ b/httpd.conf
@@ -5,6 +5,12 @@ Listen 80
 
 
 Include conf.modules.d/*.conf
+LoadModule rewrite_module modules/mod_rewrite.so
+
+RewriteEngine on
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+
 
 User apache
 Group apache
